Fix horizontal scroll issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,6 @@ html,
 body {
     background: black;
     color: #777;
-    width: 100%;
     padding-bottom: 25px;
 }
 
